Fixed z-index of card overlay

--- a/src/app/core/card/card.component.css
+++ b/src/app/core/card/card.component.css
@@ -41,8 +41,9 @@
     position: absolute;
     height: 100%;
     width: 100%;
-    background-color: rgba(0,0,255,.1);
+    /*background-color: rgba(0,0,255,.1);*/
     opacity: 0;
+    z-index: 10;
 }
 .header {
     display: flex;
